--- a/src/main/webapp/dashboard-investor.xhtml
+++ b/src/main/webapp/dashboard-investor.xhtml
@@ -3,66 +3,221 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-
-
 <h:head>
-	<title>Investor | Dashboard</title>
+<link rel="preconnect" href="https://fonts.googleapis.com/%22%3E>
+<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aubrey&display=swap" rel="stylesheet">
 </h:head>
+
 <h:body>
-	<p:slideMenu>
-		<div class="card">
-			<h:form>
-				<p:growl id="messages" showDetail="true" />
 
-				<h5 class="p-mt-0">Inline</h5>
-				<p:slideMenu style="width:200px">
-					<p:submenu label="Options">
-						<p:menuitem value="Save (Non-Ajax)" action="#{menuView.save}"
-							update="messages" ajax="false" icon="pi pi-save" />
-						<p:menuitem value="Update" action="#{menuView.update}"
-							update="messages" icon="pi pi-refresh" />
-						<p:menuitem value="Delete" action="#{menuView.delete}"
-							update="messages" icon="pi pi-times" />
-					</p:submenu>
-					<p:submenu label="Navigations">
-						<p:menuitem value="Website" url="http://www.primefaces.org"
-							icon="pi pi-external-link" />
-						<p:menuitem value="Internal" outcome="/ui/menu/menubar"
-							icon="pi pi-upload" />
-					</p:submenu>
-				</p:slideMenu>
+	<style type="text/css">
+.ui-filter-column .ui-column-customfilter .custom-filter {
+	width: 100%;
+	box-sizing: border-box;
+}
+</style>
 
-				<h5>Overlay</h5>
-				<p:commandButton id="dynaButton" value="Show" type="button"
-					icon="pi pi-home" />
-				<p:slideMenu overlay="true" trigger="dynaButton" my="left top"
-					at="left bottom" style="width:180px">
-					<p:submenu label="Options">
-						<p:menuitem value="Save (Non-Ajax)" action="#{menuView.save}"
-							update="messages" ajax="false" icon="pi pi-save" />
-						<p:menuitem value="Update" action="#{menuView.update}"
-							update="messages" icon="pi pi-refresh" />
-						<p:menuitem value="Delete" action="#{menuView.delete}"
-							update="messages" icon="pi pi-times" />
-					</p:submenu>
-					<p:submenu label="Navigations">
-						<p:menuitem value="Website" url="http://www.primefaces.org"
-							icon="pi pi-external-link" />
-						<p:menuitem value="Internal" outcome="/ui/menu/menubar"
-							icon="pi pi-upload" />
-					</p:submenu>
-				</p:slideMenu>
-			</h:form>
-		</div>
-	</p:slideMenu>
+	<div class="card">
+		<h5>Column Filtering</h5>
+		<h:form>
+			<p:dataTable var="customer" value="#{dtFilterView.customers1}"
+				widgetVar="customersTable"
+				emptyMessage="No customers found with given criteria"
+				filteredValue="#{dtFilterView.filteredCustomers1}">
 
+				<f:facet name="header">
+					<div class="p-d-flex p-ai-center p-jc-between">
+						<span>List of Customers</span>
+						<p:inputText id="globalFilter"
+							onkeyup="PF('customersTable').filter()" style="width:10rem"
+							placeholder="Enter keyword" />
+					</div>
+				</f:facet>
 
+				<p:column headerText="Name" sortBy="#{customer.name}"
+					filterBy="#{customer.name}">
+					<h:outputText value="#{customer.name}" />
+				</p:column>
 
-	<main>
-		<div class="container-main"></div>
-	</main>
-	<footer> </footer>
+				<p:column headerText="Country" sortBy="#{customer.country.name}"
+					filterBy="#{customer.country.name}">
+					<span class="flag flag-#{customer.country.code}"
+						style="width: 30px; height: 20px" />
+					<h:outputText style="vertical-align: middle; margin-left: .5rem"
+						value="#{customer.country.name}" />
+				</p:column>
+
+				<p:column field="representative" headerText="Representative"
+					filterMatchMode="exact" sortBy="#{customer.representative.name}">
+					<f:facet name="filter">
+						<p:selectOneMenu onchange="PF('customersTable').filter()"
+							styleClass="custom-filter">
+							<f:selectItem itemLabel="All" itemValue="#{null}"
+								noSelectionOption="true" />
+							<f:selectItems value="#{dtFilterView.representatives}" />
+						</p:selectOneMenu>
+					</f:facet>
+
+					<p:graphicImage
+						name="images/avatar/#{customer.representative.image}"
+						library="demo" width="32" style="vertical-align: middle" />
+					<h:outputText style="vertical-align: middle; margin-left: .5rem"
+						value="#{customer.representative.name}" />
+				</p:column>
+
+				<p:column field="date" headerText="Join Date"
+					filterMatchMode="range">
+					<f:facet name="filter">
+						<p:datePicker selectionMode="range"
+							onchange="PF('customersTable').filter()" />
+					</f:facet>
+				</p:column>
+
+				<p:column field="status" headerText="Status" filterMatchMode="exact">
+					<f:facet name="filter">
+						<p:selectOneMenu onchange="PF('customersTable').filter()"
+							styleClass="custom-filter">
+							<f:selectItem itemLabel="All" itemValue="#{null}"
+								noSelectionOption="true" />
+							<f:selectItems value="#{dtFilterView.customerStatus}" />
+						</p:selectOneMenu>
+					</f:facet>
+
+					<span
+						class="customer-badge status-#{customer.status.name().toLowerCase()}">#{customer.status.toString()}</span>
+				</p:column>
+
+				<p:column headerText="Activity" sortBy="#{customer.activity}">
+					<p:progressBar value="#{customer.activity}" displayOnly="true"
+						style="height: .5rem" />
+				</p:column>
+
+			</p:dataTable>
+		</h:form>
+	</div>
+	<div class="card">
+		<h5>Default Filter</h5>
+		<h:form>
+			<p:dataTable var="customer" value="#{dtFilterView.customers2}"
+				widgetVar="customersTable2"
+				emptyMessage="No customers found with given criteria"
+				filteredValue="#{dtFilterView.filteredCustomers2}"
+				filterBy="#{dtFilterView.filterBy}">
+
+				<f:facet name="header">
+					<span>List of Customers</span>
+				</f:facet>
+
+				<p:column headerText="Name" sortBy="#{customer.name}"
+					filterBy="#{customer.name}">
+					<h:outputText value="#{customer.name}" />
+				</p:column>
+
+				<p:column headerText="Country" sortBy="#{customer.country.name}"
+					filterBy="#{customer.country.name}">
+					<span class="flag flag-#{customer.country.code}"
+						style="width: 30px; height: 20px" />
+					<h:outputText style="vertical-align: middle; margin-left: .5rem"
+						value="#{customer.country.name}" />
+				</p:column>
+
+				<p:column field="representative" headerText="Representative"
+					filterMatchMode="exact" sortBy="#{customer.representative.name}">
+					<f:facet name="filter">
+						<p:selectOneMenu onchange="PF('customersTable').filter()"
+							styleClass="custom-filter">
+							<f:selectItem itemLabel="All" itemValue="#{null}"
+								noSelectionOption="true" />
+							<f:selectItems value="#{dtFilterView.representatives}" />
+						</p:selectOneMenu>
+					</f:facet>
+
+					<p:graphicImage
+						name="images/avatar/#{customer.representative.image}"
+						library="demo" width="32" style="vertical-align: middle" />
+					<h:outputText style="vertical-align: middle; margin-left: .5rem"
+						value="#{customer.representative.name}" />
+				</p:column>
+
+				<p:column field="date" headerText="Join Date"
+					filterMatchMode="range">
+					<f:facet name="filter">
+						<p:datePicker selectionMode="range"
+							onchange="PF('customersTable2').filter()" />
+					</f:facet>
+				</p:column>
+
+				<p:column field="status" headerText="Status" filterMatchMode="exact">
+					<f:facet name="filter">
+						<p:selectOneMenu onchange="PF('customersTable2').filter()"
+							styleClass="custom-filter">
+							<f:selectItem itemLabel="All" itemValue="#{null}"
+								noSelectionOption="true" />
+							<f:selectItems value="#{dtFilterView.customerStatus}" />
+						</p:selectOneMenu>
+					</f:facet>
+
+					<span
+						class="customer-badge status-#{customer.status.name().toLowerCase()}">#{customer.status.toString()}</span>
+				</p:column>
+
+				<p:column headerText="Activity" sortBy="#{customer.activity}">
+					<p:progressBar value="#{customer.activity}" displayOnly="true"
+						style="height: .5rem" />
+				</p:column>
+			</p:dataTable>
+		</h:form>
+	</div>
+	<div class="card">
+		<h5>Global Filter Function</h5>
+		<h:form>
+			<p:dataTable var="customer" value="#{dtFilterView.customers3}"
+				widgetVar="customersTable3"
+				emptyMessage="No customers found with given criteria"
+				filteredValue="#{dtFilterView.filteredCustomers3}"
+				globalFilterFunction="#{dtFilterView.globalFilterFunction}">
+
+				<f:facet name="header">
+					<div class="p-d-flex p-jc-end">
+						<p:inputText id="globalFilter"
+							onkeyup="PF('customersTable3').filter()" style="width:300px"
+							placeholder="Search all fields using global function" />
+					</div>
+				</f:facet>
+
+				<p:column field="name" filterable="false" />
+
+				<p:column headerText="Country" sortBy="#{customer.country.name}">
+					<span class="flag flag-#{customer.country.code}"
+						style="width: 30px; height: 20px" />
+					<h:outputText style="vertical-align: middle; margin-left: .5rem"
+						value="#{customer.country.name}" />
+				</p:column>
+
+				<p:column field="representative" headerText="Representative"
+					filterable="false">
+					<p:graphicImage
+						name="images/avatar/#{customer.representative.image}"
+						library="demo" width="32" style="vertical-align: middle" />
+					<h:outputText style="vertical-align: middle; margin-left: .5rem"
+						value="#{customer.representative.name}" />
+				</p:column>
+
+				<p:column field="date" filterable="false" />
+
+				<p:column field="status" filterable="false">
+					<span
+						class="customer-badge status-#{customer.status.name().toLowerCase()}">#{customer.status.toString()}</span>
+				</p:column>
+
+				<p:column headerText="Activity" sortBy="#{customer.activity}">
+					<p:progressBar value="#{customer.activity}" displayOnly="true"
+						style="height: .5rem" />
+				</p:column>
+			</p:dataTable>
+		</h:form>
+	</div>
+
 </h:body>
-
-
 </html>
